--- a/css/_mainlayout.scss
+++ b/css/_mainlayout.scss
@@ -1,7 +1,17 @@
 @import "functions";
+@import "grid";
 
 @include exports("mainlayout") {
   html {
     overflow-x: hidden;
+  }
+
+  body {
+    font-family: Lato, 'Helvetica Neue', sans-serif;
+    font-weight: 100;
+
+    @include small {
+      font-weight: 200;
+    }
   }
 }
